fixed spacing on home finally

--- a/frontend/src/components/footer/footer-clear/footer_clear.scss
+++ b/frontend/src/components/footer/footer-clear/footer_clear.scss
@@ -4,6 +4,7 @@
 	bottom: 0;
 	position: absolute;
 	width: 100%;
+	margin-top: 50px;
 }
 
 #footer-content-clear{
