--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -4,13 +4,13 @@
 	display: flex;
 	justify-content: space-evenly;
 	padding-top: 100px;
-	padding-bottom: 200px;
+	padding-bottom: 100px;
 
 }
 
 .calendar{
 	margin-left: 50px;
-	width: 75%;
+	// width: 75%;
 }
 
 .events-index{
@@ -21,7 +21,6 @@
 	border: 1px solid $Deep-Blue-hex;
 	padding: 20px;
 	border-radius: 5px;
-	margin-right: 50px;
 	box-shadow: 3px 3px rgba(0,0,0,.25);
 }
 
