--- a/frontend/src/components/splash/splash.scss
+++ b/frontend/src/components/splash/splash.scss
@@ -12,8 +12,9 @@
   align-items: center;
   justify-items: center;
   width: auto;
-  padding-top: 226px;
+  padding-top: 100px;
   color: #edf5e1;
+  margin-bottom: 20px;
 }
 
 .splash-page-intro-container {
@@ -22,7 +23,7 @@
   text-align: center;
   z-index: 10;
   margin: 0 auto;
-  margin-bottom: 75px;
+  margin-bottom: 50px;
 }
 
 .splash-page-title {
@@ -51,7 +52,7 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
-  
+  height: 20%;
 }
 
 #splash-seperator{
